--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,41 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="onboard-main">
+    <ion-fab vertical="bottom" horizontal="end">
+      <ion-fab-button color="warning" (click)="goNext()">
+        <ion-icon name="chevron-forward"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+    <div class="onboard-top">
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-button color="warning" (click)="goBack()">
+            <ion-icon name="chevron-back" slot="icon-only"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end">
+          <ion-button color="dark" (click)="skipBtn()" fill="clear">
+              Skip
+          </ion-button>
+        </ion-buttons>
+      </ion-toolbar>
+    </div>
+    <div class="onboard-bot">
+      <ion-slides pager="true" #mainSlides>
+        <ion-slide *ngFor="let slide of onboardSlides">
+          <div class="onb-card">
+            <div class="onb-img">
+              <img src="../../assets/img/{{slide.img}}.png" alt="slide" />
+            </div>
+            <div class="onb-desc ion-text-center">
+              <h4 class="ion-text-capitalize ion-no-margin">{{slide.title}}</h4>
+              <p class="ion-no-margin">
+                {{slide.desc}}
+              </p>
+            </div>
+          </div>
+        </ion-slide>
+      </ion-slides>
+    </div>
   </div>
 </ion-content>
